--- a/index.html
+++ b/index.html
@@ -1,40 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Al-Xorazmiy Jeopardy</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Al-Xorazmiy Jeopardy</title>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@700;900&display=swap"
+    rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+
+    .font-serif-logo {
+      font-family: 'Playfair Display', serif;
+    }
+
+    .card-shadow {
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    }
+
+    .text-teal-brand {
+      color: #009ca6;
+    }
+
+    .bg-teal-brand {
+      background-color: #009ca6;
+    }
+
+    .border-teal-brand {
+      border-color: #009ca6;
+    }
+
+    @keyframes shake {
+
+      0%,
+      100% {
+        transform: translateX(0);
       }
-      .font-serif-logo {
-        font-family: 'Playfair Display', serif;
+
+      25% {
+        transform: translateX(-5px);
       }
-      .card-shadow {
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+
+      50% {
+        transform: translateX(5px);
       }
-      .text-teal-brand {
-        color: #009ca6;
+
+      75% {
+        transform: translateX(-5px);
       }
-      .bg-teal-brand {
-        background-color: #009ca6;
-      }
-      .border-teal-brand {
-        border-color: #009ca6;
-      }
-      @keyframes shake {
-        0%, 100% { transform: translateX(0); }
-        25% { transform: translateX(-5px); }
-        50% { transform: translateX(5px); }
-        75% { transform: translateX(-5px); }
-      }
-      .animate-shake {
-        animation: shake 0.4s ease-in-out infinite;
-      }
-    </style>
+    }
+
+    .animate-shake {
+      animation: shake 0.4s ease-in-out infinite;
+    }
+  </style>
   <script type="importmap">
 {
   "imports": {
@@ -47,8 +71,10 @@
 }
 </script>
 </head>
-  <body class="bg-gray-50 text-slate-800 antialiased">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+
+<body class="bg-gray-50 text-slate-800 antialiased">
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
